--- a/flex2.html
+++ b/flex2.html
@@ -10,13 +10,17 @@
     <div class="box_con">
         <div class="box"></div>
         <div class="box"></div>
+        <div class="box1"></div>
+    </div>
+    <div class="box_con">
         <div class="box"></div>
         <div class="box"></div>
+        <div class="box1"></div>
+    </div>
+    <div class="box_con">
         <div class="box"></div>
         <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box1"></div>
     </div>
 </body>
 </html>
